first portfolio pages

--- a/fantasy.html
+++ b/fantasy.html
@@ -30,35 +30,29 @@
 								<p>by Katarzyna Goszka</p>
 							</div>
 						</div>
+						<div id="header" class="item" data-width="400">
+							<div class="inner">
+								<h1>Fantasy</h1>
+								<p></p><!-- Add description later -->
+							</div>
+						</div>
 
 					<!-- Thumb Items -->
 
-						<article class="item thumb" data-width="323">
-							<h2>Studies and Other</h2>
-							<a href="studies.html"><img src="images/thumbs/studies/study_01.jpg" alt=""></a>
+						<article class="item thumb" data-width="325">
+							<h2>The Chess Board</h2>
+							<a href="images/fulls/fantasy/fantasy_01.jpg" class="image"><img src="images/thumbs/fantasy/fantasy_01.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="162">
-							<h2>Life Drawing</h2>
-							<a href="life.html"><img src="images/thumbs/life_drawing/life_02.jpg" alt=""></a>
+							<h2>Plant</h2>
+							<a href="images/fulls/fantasy/fantasy_02.jpg" class="image"><img src="images/thumbs/fantasy/fantasy_02.jpg" alt=""></a>
 						</article>
 
-						<article class="item thumb" data-width="162">
-							<h2>Fantasy</h2>
-							<a href="fantasy.html"><img src="images/thumbs/fantasy/fantasy_02.jpg" alt=""></a>
+						<article class="item thumb" data-width="325">
+							<h2>Memories</h2>
+							<a href="images/fulls/fantasy/fantasy_03.jpg" class="image"><img src="images/thumbs/fantasy/fantasy_03.jpg" alt=""></a>
 						</article>
-
-						<article class="item thumb" data-width="153">
-							<h2>Characters</h2>
-							<a href="characters.html"><img src="images/thumbs/characters/chara_08.png" alt=""></a>
-						</article>
-						
-						<article class="item thumb" data-width="295">
-							<h2>3D Work</h2>
-							<a href="3d.html"><img src="images/thumbs/3D/3d_02.jpg" alt=""></a>
-						</article>
-
-
 				</div>
 			</div>
 
