--- a/life.html
+++ b/life.html
@@ -30,34 +30,59 @@
 								<p>by Katarzyna Goszka</p>
 							</div>
 						</div>
+						<div id="header" class="item" data-width="400">
+							<div class="inner">
+								<h1>Life Drawing</h1>
+								<p></p><!-- Add description later -->
+							</div>
+						</div>
 
 					<!-- Thumb Items -->
 
-						<article class="item thumb" data-width="323">
-							<h2>Studies and Other</h2>
-							<a href="studies.html"><img src="images/thumbs/studies/study_01.jpg" alt=""></a>
+						<article class="item thumb" data-width="191">
+							<h2>Pen Study</h2>
+							<a href="images/fulls/life_drawing/life_01.jpg" class="image"><img src="images/thumbs/life_drawing/life_01.jpg" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="162">
-							<h2>Life Drawing</h2>
-							<a href="life.html"><img src="images/thumbs/life_drawing/life_02.jpg" alt=""></a>
+							<h2>Acrilic Study</h2>
+							<a href="images/fulls/life_drawing/life_02.jpg" class="image"><img src="images/thumbs/life_drawing/life_02.jpg" alt=""></a>
 						</article>
 
-						<article class="item thumb" data-width="162">
-							<h2>Fantasy</h2>
-							<a href="fantasy.html"><img src="images/thumbs/fantasy/fantasy_02.jpg" alt=""></a>
+						<article class="item thumb" data-width="129">
+							<h2>Watercolour and conte</h2>
+							<a href="images/fulls/life_drawing/life_03.jpg" class="image"><img src="images/thumbs/life_drawing/life_03.jpg" alt=""></a>
 						</article>
 
-						<article class="item thumb" data-width="153">
-							<h2>Characters</h2>
-							<a href="characters.html"><img src="images/thumbs/characters/chara_08.png" alt=""></a>
-						</article>
-						
-						<article class="item thumb" data-width="295">
-							<h2>3D Work</h2>
-							<a href="3d.html"><img src="images/thumbs/3D/3d_02.jpg" alt=""></a>
+						<article class="item thumb" data-width="151">
+							<h2>Watercolour and soft pastels</h2>
+							<a href="images/fulls/life_drawing/life_04.jpg" class="image"><img src="images/thumbs/life_drawing/life_04.jpg" alt=""></a>
 						</article>
 
+						<article class="item thumb" data-width="192">
+							<h2>Soft pastels</h2>
+							<a href="images/fulls/life_drawing/life_05.jpg" class="image"><img src="images/thumbs/life_drawing/life_05.jpg" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="129">
+							<h2>Pencil</h2>
+							<a href="images/fulls/life_drawing/life_06.jpg" class="image"><img src="images/thumbs/life_drawing/life_06.jpg" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="144">
+							<h2>Conte</h2>
+							<a href="images/fulls/life_drawing/life_07.jpg" class="image"><img src="images/thumbs/life_drawing/life_07.jpg" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="349">
+							<h2>Pen</h2>
+							<a href="images/fulls/life_drawing/life_08.jpg" class="image"><img src="images/thumbs/life_drawing/life_08.jpg" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="402">
+							<h2>soft pastels</h2>
+							<a href="images/fulls/life_drawing/life_09.jpg" class="image"><img src="images/thumbs/life_drawing/life_09.jpg" alt=""></a>
+						</article>
 
 				</div>
 			</div>
