--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 						<article class="item thumb" data-width="323">
 							<h2>Studies and Other</h2>
-							<a href="studies.html"><img src="images/thumbs/studies/study_01.jpg" alt=""></a>
+							<a href="studies.html"><img src="images/thumbs/studies/study_01.JPG" alt=""></a>
 						</article>
 
 						<article class="item thumb" data-width="162">
