--- a/characters.html
+++ b/characters.html
@@ -25,7 +25,7 @@
 					<!-- Header Item -->
 						<div id="header" class="item" data-width="300">
 							<div class="inner">
-								<a href="index.html"><h1>Main Page</h1>
+								<a href="http://lizzardanka.github.io/"><h1>Main Page</h1>
 								<p>Theme sorted Portfolio</p>
 								<p>by Katarzyna Goszka</p>
 							</div>
